# ChangeLog for www-apps/mediawiki
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.264 2014/03/17 04:10:44 radhermit Exp $

  17 Mar 2014; Tim Harder <radhermit@gentoo.org> -mediawiki-1.19.10.ebuild,
  -mediawiki-1.21.4.ebuild, -mediawiki-1.22.1.ebuild:
  Remove old.

*mediawiki-1.22.4 (17 Mar 2014)
*mediawiki-1.21.7 (17 Mar 2014)
*mediawiki-1.19.13 (17 Mar 2014)

  17 Mar 2014; Tim Harder <radhermit@gentoo.org> +mediawiki-1.19.13.ebuild,
  +mediawiki-1.21.7.ebuild, +mediawiki-1.22.4.ebuild:
  Version bumps.

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.11.ebuild,
  mediawiki-1.21.5.ebuild:
  Stable for ppc, wrt bug #500484

  01 Feb 2014; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.11.ebuild,
  mediawiki-1.21.5.ebuild:
  Stable for x86, wrt bug #499632

  01 Feb 2014; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.11.ebuild,
  mediawiki-1.21.5.ebuild:
  Stable for amd64, wrt bug #499632

*mediawiki-1.21.5 (29 Jan 2014)
*mediawiki-1.19.11 (29 Jan 2014)
*mediawiki-1.22.2 (29 Jan 2014)

  29 Jan 2014; Samuel Damashek <sdamashek@gentoo.org> +mediawiki-1.19.11.ebuild,
  +mediawiki-1.21.5.ebuild, +mediawiki-1.22.2.ebuild:
  Version bump wrt bug #499632

  23 Jan 2014; Samuel Damashek <sdamashek@gentoo.org> -mediawiki-1.19.9.ebuild,
  -mediawiki-1.20.8.ebuild, -mediawiki-1.21.3.ebuild, -mediawiki-1.22.0.ebuild:
  Remove vulnerable versions wrt bug #498064

  23 Jan 2014; Mikle Kolyada <zlogene@gentoo.org> mediawiki-1.19.10.ebuild,
  mediawiki-1.21.4.ebuild:
  ppc stable wrt bug #498064

  23 Jan 2014; Mikle Kolyada <zlogene@gentoo.org> mediawiki-1.19.10.ebuild,
  mediawiki-1.21.4.ebuild:
  x86 stable wrt bug #498064

  23 Jan 2014; Samuel Damashek <sdamashek@gentoo.org> mediawiki-1.19.10.ebuild,
  mediawiki-1.21.4.ebuild, mediawiki-1.22.1.ebuild:
  Fix ebuild syntax, add die to external commands
