@@ -5,26 +5,32 @@ AUX postinstall-1.18-en.txt 2611 SHA256 8388d74e84d63c40cbc697e25639be5f07108ecc
 AUX postupgrade-1.16-en.txt 1514 SHA256 5d7aedb456fbff83adf0335ca5e1c99062e694e178bc93d749615ff63dc883f4 SHA512 58d11cdf8daaa2ee62ca64dfeddad3ef2d10feac5b93b51f96e5802dd2915c3d969b8e99d059e79a9b62386ae70a7690db3c4e4d248501e839769bc7f24d2dd5 WHIRLPOOL f17f927bfedfdc502c752276c0876bebe771918242be98de32d5fc51003a054132f4f6b4a16caeca293c1ebb44c12bc322eee5efcefda228ea97136b00c6e1ee
 DIST mediawiki-1.19.11.tar.gz 18737405 SHA256 e9f30fba255beaa8c724f946d7408e6a2b04efb5a6439fd1658e56ad4a2d43a0 SHA512 1d123b2059dac88d177d830e0ccb0043b6b825be76a5713962db72bc67ab8ea7a2fecc49f089baf80cee54df8591ab5fc280e1825cae7b2b0010eebf6abf3e8f WHIRLPOOL d6a1cae3507f8b40073f54993dc5a26ece21dfaf6ba414b6c2525658f07a6fb9b224ad3dd256e8c1a0e303c1f32ade6ef5899209f62da40c1a94a39176c703b2
 DIST mediawiki-1.19.13.tar.gz 17999027 SHA256 9aae075950c98901beaefba13e7a64c6d41111d4e478a1d1779f6fa3d87c0eff SHA512 82227c009217e6d75355bb620d68689d263b17783b68ef0cb5c36bd8a9d9db59b4aed4d93b0d3a8041d3fc344d05d23230baa5dfc5ac251606dc4ddcd3ee6a59 WHIRLPOOL 859b7e18a1c73a0134de38ca56a23cbb5d4b1e38ed991674502d9a045361fbda13a42befdc43d820c3dcbc16ee580382aa6f0bb1b4b2b4edeb57efb5081ccf20
+DIST mediawiki-1.19.15.tar.gz 17935557 SHA256 cd1816a1304e0143efc8b896931e73343ddec7c4e3743fca0681352b4033f791 SHA512 c8c2ab3e41677885b016e0f7c09af0014525f6a7cf94e507c3124c2b9304e6005db756654daf61eaf360c2a5091049acf76e5dd567456edcc83e5d987abb9d0f WHIRLPOOL db588bb1be7bd6b920c1083866b6870a1b22a7c40c99aa7778f8b60f8d5ea6f8ab019786366ea1cdfe9b9af722bec8ee1c7b02253962721bc7764f7c925b9352
 DIST mediawiki-1.21.5.tar.gz 20653939 SHA256 6e24c439e73bff73910bdb178d332c9aef814c2bed0ca4561267d88450801876 SHA512 2cbffc069567cfe8fc034846027f835cce3e3002aba0d21cdfb5b9d4378808d663a387ff048e6094752ee1a6d3b1a9a404d0cb0ce4c2c696698b9db236d22038 WHIRLPOOL a6e308f096e3f8d15cef1d1da8f9e25795651b5a6a094b1192955437b87cc252be76d86a95306990e778211348629d92b48dc79f2e15d710508e6dfa6bdcd784
 DIST mediawiki-1.21.7.tar.gz 19784466 SHA256 df2d80597d93f61c2635480131e061acdee57c0ef7c476b827162fbf7c5b281d SHA512 13bcc4bc38c48df6072f2fa16c239ecd3ec54e5b4400bb77b0de3f7d289b0453eaf78be6ccd51a7ddfd8307adafdb307d4f8b03aa319a4befd9581d4cd468688 WHIRLPOOL 12fe703b75870658adadcb6e71a386114a5158f2cf82f222235227f2d94eccaacac8d67c88dc5334f1af0c890b6648ae70bf29e784c2995b652e34405ebd988c
+DIST mediawiki-1.21.8.tar.gz 20557952 SHA256 4790c2276d104ff77114980fb933c3674f7d9d618464b68a5975d1ac06400e28 SHA512 be7e64f02834c8de7ca60ed65401da3f784b3c50dbbc0efc3e3253f7a8661a538e151ddb4548ff61fad977582201efffa7299f8ef5722ffa38e76603ef9695d2 WHIRLPOOL 642040b68af458202c05061864cdec2912ec3878cabe5342063504773dae15d31869784ec123972b4ee8efd39cee572f5ce9b9a3eb13b81a79c7305d18093e6d
 DIST mediawiki-1.22.2.tar.gz 20780543 SHA256 476300d531dd38c718453640ddf2f6bc24f54dc6d96a7f3e3053cb0efd01c9a4 SHA512 f36ba457954605cb57fcbffa97f15aba3d944152ed9fd16cab1acad16482d2c9e3c6e5411dd705429ce987867ec6c301732acbd84e79f23428b21926bc2ac38a WHIRLPOOL 286bdae70798a045e59af240cd4d546c791b280669ec0de522189c03548e558c345e66579ece844902dfae8f1fa8fe2f740dd2430f0da3aa76d757f6a1bc1286
 DIST mediawiki-1.22.4.tar.gz 19948845 SHA256 51c259cba0a9a6485d84c10c3ebc9dbafde3e2460a6b5b878c6305f3951d6ef1 SHA512 7d5841dd6a00233f6967cd90df85d52828ae24cb63209cc57e2bb245ba111c14b6e39d761b2887be6af36bff3a759ab3d5c3119fc891aa15d86666f8494142da WHIRLPOOL 3ab8afeb69b8fe2202ed5a6c0dcc68f5283c4ef96718c465059ac2752cccc44b88f100576e279d56300b16dd3ecf3086a138ad39d3224236c53dac5afad6cab3
+DIST mediawiki-1.22.5.tar.gz 20672446 SHA256 3acae43cb7859f5403c022f285d2281c41cf78a8b914777da5a049f8934cf722 SHA512 b6fa95d3d5fcfcd33bedb286bcb71045d9fb6c0fef5e5402e882ae1639efc8abeee0c1e8a27227bc4347fd2a233558742f5b81272afcf962abc01d321a645be9 WHIRLPOOL 24850854a7076cc6790e7907b07865793385caa138d3ec451945dfd579cee3b2d90bc1a927a37f2469ae4bcf20749b721580bb4d3901d4e64687de6461c7cff3
 EBUILD mediawiki-1.19.11.ebuild 2503 SHA256 7339068f438011875f701833789ddb5861a67d35aeb8fb7753be13318b697348 SHA512 9d9a5e2ef984a88b848336e8539abbd9601370574b07ddae73dcf5a0f552c4dcdd773d62cf3b06952dd7cc7a6dd15932a20171d1a75777f6dd93b1cef155a8fe WHIRLPOOL 4c7ae0db8afe9d5805b8753f9ecc2d25b2812c4afff1618402bd90f9738d2c434f8ab41715cdbbec53296bc207a2684c173237fedd3aee5bcf047feabe072528
 EBUILD mediawiki-1.19.13.ebuild 2508 SHA256 43f18baca9e6fdca5a927e7880f35eaa78e7df1b5da75cb1f299998b52a92301 SHA512 ba3fb0ab40114327783569961c8c2783af26fd4a46158ca63ab0406206113f38eddd16660a011e57a38934f84776d65e719f8723fddd15ca2a1949cf40bb82bd WHIRLPOOL e2ca3e0cd82d304641289988df23af8711900707ee063f9bdeb107b16d839c26912372f3ca7b532ec51724ea59012b8a7b7f6bd05fffc473769715fa5619fb52
+EBUILD mediawiki-1.19.15.ebuild 2508 SHA256 b5d11ee12fef286c4b33df60fa5795c51654a7aa4203ab9aa896dc7ec49ab44a SHA512 0599d4540b78441c426cd53f8daecbe56c4d49b90bf7e0451dca492c04816832568419791a9491e8a864f9d52e836c88fa62a7704bcfac3e586f69a8e3a3fd9c WHIRLPOOL aaa72c1f46712ce356dcaef9f49a3372450c610353f004ada7d6a9d9a527d5ca713b9dafe54df709de7459167bcead95d71570911828b45e412cf5bb2079d716
 EBUILD mediawiki-1.21.5.ebuild 2511 SHA256 d24dffc55ed521d1b02f02b8882741437e3dbd2d568cfbb3e6f84edd1ac69a22 SHA512 e8209381b944af2bfde7720a669748f9d62dfae35428d1caad4b66506c4414f8154236713bed164a1112a519338887a4fff481c78765a905ae01ce5c357817c4 WHIRLPOOL 12fe5303ba677164a583d06bf638740da3a216033afb1e54349bc566c7b2e354fce8f3a7f5677f3dd95347d08873a00efbc6d648cd2dcfd777e3a75d8e27d08b
 EBUILD mediawiki-1.21.7.ebuild 2516 SHA256 f2ea9ce938e50860d7b6323d4b2024803a27f9216494e5f5cbd25df315987aea SHA512 dc9f0cee1180b104ba3ccd2af29923d4ed15c1e25ac32d99f8a6213f231b00aaad4d7fc9b2d25e55cd051d720d1d171c4b879fd75c62413a0b349d2eee772f2d WHIRLPOOL d7ce328fe441310847fb52c07b43f74b25a9c353bfce889ccd5db7f34ba16e87ac6c981955dfc932dfe0283b274be3baa3e5b528cf773f5abc0f9778e5e62576
+EBUILD mediawiki-1.21.8.ebuild 2516 SHA256 ac8ed38b73261fcd043e55c30993e64849a56484fbd1f1e0d5a477da6b69c187 SHA512 d56a56a1136ed025f4e86e660e56b19d2ff93902321a21ccd18c43a8c1cab28bbd9a2324a7d7077f60f45aeae53a2b5fe123b8864ce051ec938d53847c7727fc WHIRLPOOL e19087a62d3f0634aa0d706e9f8462834ded61e56af070006d931a0f002cddf5974645f59ffa273912514760b017f37fe68ae1dbcd5efaa238937abc7ee16a75
 EBUILD mediawiki-1.22.2.ebuild 2525 SHA256 eecb0e6f0ba8057dc827e28f4f747bdc7218dc46e6964e1ef89ea6073d827460 SHA512 f405613802e4a7df73687e467a3627dfaa074a9d47e482ff8dfbc145adc8f54930e8d826f0649b29e9f2fb6731c42c2316120938fc17ba81de2aefb158b9de27 WHIRLPOOL 951fe8c97c13a6f5694fb543d038b764c853abb3a31b7d960e4d19815f6ab598a6c2807bf3cd0b4e22d59a1795b66e96cec40431bf45377afd9ebb4c6418647f
 EBUILD mediawiki-1.22.4.ebuild 2521 SHA256 c79c55ca1c09977645d005b5fbcfa05618a5e26033957c49d410e81f284cbb3d SHA512 483e34051fa668ca9da721fe9f16eb9550e6758a42f1b6527effe564a32cf2577ce313925525e99ecbcf5cbf920ab5bde1a3fbda5aba4ca28444c85239a5ddae WHIRLPOOL c04e134f644bff938ca9c283729d883022bf32cd9cf130c5eb0e492e7209e2f30b105edbf6d226f494ead6323daa39eebfb595bb89ab3b13b22bc4ebeea84509
-MISC ChangeLog 42738 SHA256 75f85d15cf1adb94c90524a341148f1ef973741ad1d956826b26bcb6695315ec SHA512 12887bbb6abc664312c31831e0363d59db5bfeec4df1ca237e2bbd1beb91d3a451db7d3c6fb456d450c74df5b73c945db7e19821343b439dbbfaf1d426e1a509 WHIRLPOOL 432af6164df19676672027a09a0d9b53e742f6f602c4574a1ba4924db31a52aa3bc4ec0cc2957f26608d42b2a40db24684bf9b52c75e32ecf05d3cfb5def8437
+EBUILD mediawiki-1.22.5.ebuild 2521 SHA256 ee83ffb1d4fc1d9eb528693e5a0d0d46b8b0abc80a1e74fdf7f1897695541efd SHA512 e8df08cd429b20aa6e1275265b881664b6197fd5c6776710c6dbe0370f0db2f56efa2c6aacb8629a5ec6194fd6106956e5ded9367ae732940807235e8efe3bce WHIRLPOOL e4210c2db91752583d7200aefcdfe094a70345e7f8e12e556ca58d4d36ba9fc7a07b35c44fe36d390a09093b5ab75e39fc32059b8dca66ed94cf463a5cb206bd
+MISC ChangeLog 42999 SHA256 a372629d7587a8fb622149b3adbec354bd13042298140a3750770caa5a4e904b SHA512 506761f23fc512c0e772e66ce878f6058981f3956e3d383435a3761cd1442857c43a12145ae50944f14a1a846ed7e5c9cae419577fe676d534c73672f833aaa9 WHIRLPOOL 9bfa99484d7f8585dc63bedc0d141fd5843ec983f53320c3eabf479448fce86daf6cdc28ea21154e0f9dd5315247eccd07305f89a6176fcefa71af15f4decfab
 MISC metadata.xml 161 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4 SHA512 da8733f12ac4bebcfa485138fd9880683c1196efc0312a588ffce412ed14c1dd831e005129b6598d027af44d381fceb844453a433d0c982348e21f2d9c49f52e WHIRLPOOL 2b56ebef4f0870596c32c35c96e6dfbc911f6a3d8fe0e8c463df76dfa73dde112948c814b9a9ee996b7d71a85e4a723033ee3b92f4cde0f31d0770404d7dba61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTJnXFAAoJEEqz6FtPBkyjqUwH/jHsXFHvVsYhIgVrHbLDUFTg
-ajHxy5LlQZNs4v7e8z43R2nIj34ssiXk9yN1Dvq/U58BIz7f/361B/mVrJWOeZRe
-LKQRHuDam67LZFSglGrXfpk0OhSLmYLQz1fvrX6nWWVOZOiRmfL1khLtJgs7T3TM
-ebQmda6sjAB6z4p8zcwgJvwIN4SkMHuODG0/se6S1Y0hsJAt91r3AovWqRMznfpT
-1OqrtASrc7qaC8S67JVv9i2Q6K/5nTfKm4BCrjJ56gmDbj/jVnODqyDUePDG2Nrf
-Uu4JVqPuDyWZP71ahiS/JrIdLTxzjQ0F8O3n/B8hkegl0iMDoll9CTkTyvoIT5A=
-=YKWl
+iQEcBAEBCAAGBQJTSoU+AAoJEEqz6FtPBkyjRF0IAJkogiH1IHDIGVvhD2R/KjyL
+JiYC3o1Ni/6oRgDDmspkCfXQ4ozI6Qh+5ZXBijtExLaYqipD7ccHZK+RShF7GI6P
+mQVyf1ouIFvGo77BGBlUx7RBs+owVw4Rvs1uPB/zS3bzlqIJsHb8Tr5ow3H1Y0ye
+srFKoGzV43M5jqvZzZtmETNmZOuhB6Aa0wDIrkx+tWt5QD53ROMPuaNsLqy54gJU
+WuQSwetHI+yeIHyUKL59LXMB/WtRn1fBxJ73sEGKDBjD2hJMIc3tp1kRRhh6URWi
+/PayehJshWgJAgjWMvPf4h0fGnZhhLuP/sWQI4BgrYEckCsfgzATnK/MSOqckj0=
+=4mmP
 -----END PGP SIGNATURE-----
